2013-12-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.840

2013-12-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgraph.c src/win/winmain.c src/win/wmenu.c
	src/win/wprinter.c src/win/wtext.c:  No need to have separate code
	for win32 and win64 since minimal supported platform is XP.  System 
	headers deal with that already. Also include Allin Cottrell's patch to
	the dialog callbacks. The correct return type is indeed INT_PTR.

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:  Implement
	modify_plots() terminal interface.

	* term/win.trm (WIN_layer):  Ignore TERM_LAYER_RESET in multiplot
	mode.

2013-12-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/graphics.h src/mouse.c src/parse.c
	src/plot2d.c src/save.c src/save.h src/set.c src/show.c src/tables.c
	src/tables.h src/unset.c:

	New plot style "with parallelaxes".

	* configure.in demo/parallel.dem docs/gnuplot.doc docs/plotstyles.gnu:

	Documentation and demo for parallel axis plots. Default configuration
	is to support up to 7 parallel axes.  This can be increased by editing
	MAX_PARALLEL_AXES, but MAX_PARALLEL_AXES must be <= MAX_NUM_VAR.

2013-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/plot2d.c src/tables.c src/interpol.c:

	New smoothing option "mcsplines" - piecewise monotonic cubic splines
	calculated using the algorithm of FN Fritsch & RE Carlson (1980),
	SIAM Journal on Numerical Analysis 17: 238-246.

2013-12-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c:  Make "title foo ..." and "notitle foo ..."
	truly identical in terms of what options they accept.
	Bug #1313

	* configure.in src/axis.h src/command.c src/command.h src/gadgets.c
	src/gadgets.h src/mouse.c src/plot2d.c src/plot3d.c src/tables.c: